--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.17.0",
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0"
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
