--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "TAKA",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.562.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -16,7 +17,10 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "formidable": "^1.2.1",
     "mongoose": "^5.7.7",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
